2003-01-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnrtype/nr-type-gnome.c (nr_typeface_gnome_new): Ditto

	* src/print.c (sp_print_preview_document): Fix gnome-print support
	(sp_print_document): Ditto

	* src/libnrtype/nr-type-xft.c (nr_type_xft_init): Added ebug printout

	* src/widgets/button.c (sp_button_button_press): Do not grab mouse
	(sp_button_button_release): Ditto

2003-01-19  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/desktop.c (sp_dtw_status_frame_size_request): Always request minimum size

	* configure.in: Define GETTEXT_PACKAGE properly (Thanks to Christian Rose)

	* src/libnrtype/nr-type-xft.c (nr_type_xft_init): Removed CORE, so Xft fontlist
	should now be read properly with Debian PPC and or fontconfig systems

2003-01-15  MenTaLguY  <mental@rydia.net>

	* src/sp-object.c (sp_object_get_unique_id): don't include namespace prefix when generating ids

2003-01-15  MenTaLguY  <mental@rydia.net>

	* src/widgets/sp-xmlview-tree.c (add_node): tree nodes associated with elements pretend they initially have a NULL id
	(element_attr_changed): display elements with a NULL id properly

2003-01-15  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-private.h: added SPXMLNs structure

	* src/xml/repr.h: added decls for sp_xml_ns_uri_prefix() and sp_xml_ns_prefix_uri()

	* src/xml/repr-io.c: improved handling of namespace prefixes
	(sp_repr_qualified_name): added hashtable to keep track of NS prefixes used
	(sp_repr_read_node): Ditto
	(sp_repr_do_read): Ditto + replaced if cascade with calls to sp_xml_ns_uri_prefix()
	(sp_repr_set_xmlns_attr): helper to set xmlns attributes

	* src/xml/repr-util.c: added namespaces list
	(sp_xml_ns_register_defaults): procedure to initialize namespace mapping list
	(sp_xml_ns_auto_prefix): helper routine to automatically select a "good" prefix for a given namespace URI
	(sp_xml_ns_uri_prefix): returns a prefix to use for a given namespace URI, registering a mapping automatically if necessary